# csr-schema

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  basic-guide.md  camera.md  camera_validator.cc  camera_validator.h  csr_validator.cc  csr_validator.cpp  example.csr  general_validators.cc  general_validators.h  helpers.cc  helpers.h  material.md  material_validator.cc  material_validator.h  primitive_validator.cc  primitive_validator.h  quad.md  sphere.md  texture_validator.cc  texture_validator.h
.devcontainer/: devcontainer.json
docs/: basic-guide.md  camera.md  instance.md  material.md  primitive.md  sphere.md
examples/: cornell_box.csr  cornell_instances.csr  example.csr  sphere.csr
examples/expansive_box/: expansive_box.csr
examples/grass_horse/: grass.mtl  grass_horse.csr
include/: camera_validator.hh  csr_validator.hh  general_validators.hh  helpers.hh  instance_validator.hh  material_validator.h  material_validator.hh  medium_validator.hh  primitive_validator.h  primitive_validator.hh  sky_validator.hh  texture_validator.h  texture_validator.hh  volume_validator.hh
src/: camera_validator.cc  csr_validator.cc  general_validators.cc  helpers.cc  instance_validator.cc  main.cc  material_validator.cc  medium_validator.cc  primitive_validator.cc  sky_validator.cc  texture_validator.cc  volume_validator.cc
tools/: cleanup.sh  compile.sh
